# slack-randompicker

./: Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
randompicker/: app.py  constants.py  format.py  jobs.py  parser.py  slack_utils.py
tests/: app_test.py  conftest.py  format_test.py  jobs_test.py  parser_test.py  slack_utils_test.py
