[tool.poetry]
name = "slack-randompicker"
version = "0.1.0"
description = ""
authors = ["m-vdb"]

[tool.poetry.dependencies]
python = "^3.7"
flask = "^1.1.2"
pytest = "^5.4.1"
slackclient = "^2.5.0"
requests = "^2.23.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
