[tool.poetry]
name = "slack-randompicker"
version = "0.5.0"
description = ""
authors = ["m-vdb"]

[tool.poetry.dependencies]
python = "^3.7"
slackclient = "^2.5.0"
requests = "^2.23.0"
dateparser = "^0.7.4"
recurrent = "^0.2.5"
python-dateutil = "^2.8.1"
sanic = "^19.12.2"
apscheduler = "^3.6.3"
SQLAlchemy = "^1.3.16"
psycopg2 = "^2.8.5"
cron-descriptor = "^1.2.24"

[tool.poetry.dev-dependencies]
pytest = "^5.4.1"
pytest-freezegun = "^0.4.1"
pytest-asyncio = "^0.11.0"
pytest-mock = "^3.1.0"
pytest-cov = "^2.8.1"
black = "^19.10b0"
mypy = "^0.770"
coveralls = "^2.0.0"
pytest-sanic = "^1.6.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
